# ezshop

./: .env_example  README.md  docker-compose.yml  pyproject.toml
ezshop/: schema.yml
ezshop/ezshop/: asgi.py  config.py  settings.py  urls.py  wsgi.py
ezshop/games/: admin.py  models.py  serializers.py  urls.py  views.py
ezshop/games/migrations/: 0001_initial.py  0002_alter_game_options_alter_game_description_and_more.py  0003_game_photo.py
ezshop/shop_cart/: models.py  serializers.py  urls.py  views.py
ezshop/shop_cart/migrations/: 0001_initial.py  0002_alter_shopcart_options_and_more.py  0003_alter_shopcart_game.py
ezshop/user_balance/: serializers.py  service.py  urls.py  views.py
ezshop/users/: models.py  serializers.py  urls.py  views.py
ezshop/users/migrations/: 0001_initial.py  0002_alter_user_balance.py
